Bug 130581 - Hide Slide can't be undone
Summary: Hide Slide can't be undone
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:24.2.0
Keywords:
Depends on:
Blocks: Undo-Redo
  Show dependency treegraph
 
Reported: 2020-02-11 08:13 UTC by Xisco Faulí
Modified: 2023-07-19 08:13 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-02-11 08:13:38 UTC
Steps to reproduce:
1. Open Impress
2. Right click on first slide on slide pane
3. Hide slide
4. Ctrl + Z

-> Nothing happens. Undo button is disabled as well

Reproduced in

Version: 7.0.0.0.alpha0+
Build ID: 5d00a1c9c6e85f3d7a3e05ab485da79980c38d44
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

and

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 1 Xisco Faulí 2020-02-11 08:14:04 UTC
@Jim, I thought you might be interested in this issue...
Comment 2 raal 2020-02-11 14:45:19 UTC
confirm with Version: 7.0.0.0.alpha0+
Build ID: d41d7ecb60fb38204fafcb1aa4595992721855e6
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3;
Comment 3 QA Administrators 2022-02-11 03:40:49 UTC Comment hidden (obsolete)
Comment 4 Regina Henschel 2022-02-11 09:50:10 UTC
Still a problem in Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: ccbd2b0c663fa19be5301f0ea8ac74caa055fe47
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: threaded
Comment 5 Xisco Faulí 2023-05-19 10:02:42 UTC
Still reproducible in

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 8c544caa52c213fd8e02029cf3fabfc89fd14693
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: x11
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 6 Xisco Faulí 2023-05-19 10:03:45 UTC
@Andreas, I thought maybe you might be intested in this issue
Comment 7 Andreas Heinisch 2023-05-23 07:00:55 UTC
Hi Xisco!

I am always interested in bug reports but atm I have very limited time ressource due to the implementation of the pushpins for the start center. I can provide some code pointers:

SlotManager::ChangeSlideExclusionState sets the page descriptor (Excluded)

Than you have to check if Undo is enabled via mrSlideSorter.GetView().IsUndoEnabled(). If that is the case BegUndo on the same object using a string ressource (imho has to be created something like "Hide/show slide".

At the end of the method AddUndo to the slide sorter where a new SdrUndoAction object has to be created which is missing at the moment.

Maybe in the next weeks I can provide a patch.
Comment 8 Commit Notification 2023-07-17 07:11:35 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2b3a950e937efe77ad39b034819c9f7a707fe29e

tdf#130581 - Add undo command for hide/show slides

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-07-19 08:13:01 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fd361874d5c4da99dec763dfdc9c4dd21dfe34a6

tdf#130581 - Improve unit test of undo command for hide/show slides

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.