sd/source/ui/slidesorter/controller/SlsPageSelector.cxx
@@ -218,6 +218,24 @@ bool PageSelector::IsPageSelected(int nPageIndex)
         return false;
 }
 
+bool PageSelector::IsPageVisible(int nPageIndex)
+{
+    SharedPageDescriptor pDescriptor (mrModel.GetPageDescriptor(nPageIndex));
+    if (pDescriptor)
+        return pDescriptor->HasState(PageDescriptor::ST_Visible);
+    else
+        return false;
+}
+
+bool PageSelector::IsPageExcluded(int nPageIndex)
+{
+    SharedPageDescriptor pDescriptor(mrModel.GetPageDescriptor(nPageIndex));
+    if (pDescriptor)
+        return pDescriptor->HasState(PageDescriptor::ST_Excluded);
+    else
+        return false;
+}
+
 int PageSelector::GetPageCount() const
 {
     return mrModel.GetPageCount();
